70% of the way through booking a hearing

--- a/app/views/hearings/pages/panel.html
+++ b/app/views/hearings/pages/panel.html
@@ -9,16 +9,10 @@ Case details
 
 
     <main class="" id="main-content" role="main">
-
-            <div class="govuk-grid-row"  style="max-width:1860px; margin: 0 auto;">
-
-            <div class=""  style="display: flex; justify-content: space-between; ">
+        <div class="govuk-grid-row"  style="max-width:1860px; margin: 0 auto;">
+            <div class="govuk-tabs__panel" id="event" style=" padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px; min-height: 300px;">
 
 
-
-                <div class="govuk-tabs__panel" id="event" style="display: flex; padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px; min-height: 300px;">
-
-                    <div style="margin-top: 40px;">
 
                         <h2 class="govuk-heading-l">Panel</h2>
 
@@ -31,6 +25,121 @@ Case details
                             >
 
 
+                            <div class="govuk-form-group">
+                                <p class="govuk-!-font-weight-bold govuk-!-margin-bottom-3">Panel members on previous hearings</p>
+
+                                <table class="govuk-table" style="width:500px;">
+                                    <thead class="govuk-table__head">
+                                    </thead>
+                                    <tbody class="govuk-table__body">
+                                        <tr class="govuk-table__row">
+                                            <th scope="row" class="govuk-table__header" style="font-weight: 400;">20 July 2021</th>
+                                            <td class="govuk-table__cell">Judge Jane Smith<br>Dr David Naran</td>
+                                        </tr>
+                                        <tr class="govuk-table__row">
+                                            <th scope="row" class="govuk-table__header" style="font-weight: 400;">14 April 2021</th>
+                                            <td class="govuk-table__cell">Judge Ash Chan<br>Dr Laura Jones</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+
+
+
+
+                            <div class="govuk-form-group govuk-!-margin-top-5">
+                                <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
+                                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                                        <h3 class="govuk-fieldset__heading">
+                                            Reuse the most recent panel?
+                                        </h3>
+                                    </legend>
+                                    <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
+
+                                        <div class="govuk-radios__item">
+                                            <input class="govuk-radios__input" id="contact" name="contact" type="radio" value="email" onclick="();">
+                                            <label class="govuk-label govuk-radios__label" for="contact"  onclick="showJudges();">
+                                                Same panel as last time
+                                            </label>
+                                        </div>
+
+                                        <div class="govuk-radios__item">
+                                            <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text"   onclick="(); ">
+                                            <label class="govuk-label govuk-radios__label" for="contact-3" onclick="hideJudges(); ">
+                                                A totally new panel to the case
+                                            </label>
+                                        </div>
+
+                                    </div>
+
+                                </fieldset>
+                            </div>
+
+
+
+
+                            <div class="govuk-form-group">
+                                <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
+                                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                                        <h1 class="govuk-fieldset__heading">
+                                            Select
+                                        </h1>
+                                    </legend>
+                                    <div id="waste-hint" class="govuk-hint">
+                                        Select all that apply.
+                                    </div>
+                                    <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+                                        <div class="govuk-checkboxes__item">
+                                            <input class="govuk-checkboxes__input" id="venues1" name="venues" type="checkbox" value="BEXLEYHEATH SOCIAL SECURITY AND CHILD SUPPORT TRIBUNAL">
+                                            <label class="govuk-label govuk-checkboxes__label" for="venues1">
+                                                Salaried legally qualified
+                                            </label>
+                                        </div>
+                                        <div class="govuk-checkboxes__item">
+                                            <input class="govuk-checkboxes__input" id="venues2" name="venues" type="checkbox" value="EAST LONDON TRIBUNAL HEARING CENTRE">
+                                            <label class="govuk-label govuk-checkboxes__label" for="venues2">
+                                                Fee paid legally qualified
+                                            </label>
+                                        </div>
+                                        <div class="govuk-checkboxes__item">
+                                            <input class="govuk-checkboxes__input" id="venues3" name="venues" type="checkbox" value="ENFIELD SOCIAL SECURITY AND CHILD SUPPORT TRIBUNAL">
+                                            <label class="govuk-label govuk-checkboxes__label" for="venues3">
+                                                Disability qualified
+                                            </label>
+                                        </div>
+                                        <div class="govuk-checkboxes__item">
+                                            <input class="govuk-checkboxes__input" id="venues4" name="venues" type="checkbox" value="FOX COURT SSCS (HOLBORN COURTS AND TRIBUNALS)">
+                                            <label class="govuk-label govuk-checkboxes__label" for="venues4">
+                                                Financially qualified
+                                            </label>
+                                        </div>
+                                        <div class="govuk-checkboxes__item">
+                                            <input class="govuk-checkboxes__input" id="venues5" name="venues" type="checkbox" value="HATTON CROSS TRIBUNAL HEARING CENTRE">
+                                            <label class="govuk-label govuk-checkboxes__label" for="venues5">
+                                                Medically qualified - Specialist
+                                            </label>
+                                        </div>
+                                        <div class="govuk-checkboxes__item">
+                                            <input class="govuk-checkboxes__input" id="venues6" name="venues" type="checkbox" value="ROMFORD COUNTY COURT AND FAMILY COURT">
+                                            <label class="govuk-label govuk-checkboxes__label" for="venues6">
+                                                Medically qualified - non specialist
+                                            </label>
+                                        </div>
+                                        <div class="govuk-checkboxes__item">
+                                            <input class="govuk-checkboxes__input" id="venues7" name="venues" type="checkbox" value="SUTTON SOCIAL SECURITY AND CHILD SUPPORT TRIBUNAL">
+                                            <label class="govuk-label govuk-checkboxes__label" for="venues7">
+                                                Salaried - Medcally Qualified
+                                            </label>
+                                        </div>
+
+
+                                    </div>
+
+                                </fieldset>
+                            </div>
+
+
+
 
                             <div class="govuk-form-group  govuk-!-margin-top-5" >
                                 <button class="govuk-button" data-module="govuk-button">
@@ -41,16 +150,52 @@ Case details
                         </form>
 
 
-
-                    </div>
-
-                </div>
-
             </div>
-
-
-
         </div>
     </main>
+
+
+
+
+
+
+
+<script>
+
+    function showJudges()
+    {
+        var x = document.getElementById("conditionaljudge");
+        if (x.style.display === "none")
+        {
+            x.style.display = "block";
+        }
+
+        var y = document.getElementById("conditionaljudgelevels");
+        if (y.style.display === "block")
+        {
+            y.style.display = "none";
+        }
+    }
+
+    function hideJudges()
+    {
+        var x = document.getElementById("conditionaljudge");
+        if (x.style.display === "block")
+        {
+            x.style.display = "none";
+        }
+
+        var y = document.getElementById("conditionaljudgelevels");
+        if (y.style.display === "none")
+        {
+            y.style.display = "block";
+        }
+    }
+
+
+
+</script>
+
+
 
 {% endblock %}
