--- a/app/views/hearings/pages/startrequest.html
+++ b/app/views/hearings/pages/startrequest.html
@@ -9,14 +9,8 @@ Case details
 
 
     <main class="" id="main-content" role="main">
-
-            <div class="govuk-grid-row"  style="max-width:1860px; margin: 0 auto;">
-
-            <div class=""  style="display: flex; justify-content: space-between; ">
-
-
-
-                <div class="govuk-tabs__panel" id="event" style="padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px; min-height: 300px;">
+        <div class="govuk-grid-row"  style="max-width:1860px; margin: 0 auto;">
+            <div class="govuk-tabs__panel" id="event" style="padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px; min-height: 300px;">
 
                         <h2 class="govuk-heading-l">Request a hearing</h2>
 
@@ -29,7 +23,29 @@ Case details
 
 
 
+                            <p>Smith v Smith</p>
 
+                            <p>03 - Judge, Doctor and disability member</p>
+
+                            <div class="govuk-inset-text">
+                                Rastricted case
+                            </div>
+
+                            <div class="govuk-inset-text">
+                                Flags: Vunerable party
+                            </div>
+
+
+                            <div class="govuk-form-group" style="width: 600px;">
+                                <label class="govuk-label govuk-label-m govuk-!-font-weight-bold" for="more-detail">
+                                    What facilities are required in the court?
+                                </label>
+                                <div id="more-detail-hint" class="govuk-hint">
+                                    e.g. A tv to play video.<br>
+                                    Do not include party specific requirements.
+                                </div>
+                                <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
+                            </div>
 
 
 
@@ -44,12 +60,7 @@ Case details
                         </form>
 
 
-                </div>
-
             </div>
-
-
-
         </div>
     </main>
 
