--- a/app/views/hearings/pages/timing.html
+++ b/app/views/hearings/pages/timing.html
@@ -9,16 +9,10 @@ Case details
 
 
     <main class="" id="main-content" role="main">
-
-            <div class="govuk-grid-row"  style="max-width:1860px; margin: 0 auto;">
-
-            <div class=""  style="display: flex; justify-content: space-between; ">
+        <div class="govuk-grid-row"  style="max-width:1860px; margin: 0 auto;">
+            <div class="govuk-tabs__panel" id="event" style="padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px; min-height: 300px;">
 
 
-
-                <div class="govuk-tabs__panel" id="event" style="display: flex; padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px; min-height: 300px;">
-
-                    <div style="margin-top: 40px;">
 
                         <h2 class="govuk-heading-l">Timing and priority</h2>
 
@@ -41,15 +35,7 @@ Case details
                         </form>
 
 
-
-                    </div>
-
-                </div>
-
             </div>
-
-
-
         </div>
     </main>
 
