--- a/app/views/hearings/pages/language.html
+++ b/app/views/hearings/pages/language.html
@@ -9,19 +9,12 @@ Case details
 
 
     <main class="" id="main-content" role="main">
-
-            <div class="govuk-grid-row"  style="max-width:1860px; margin: 0 auto;">
-
-            <div class=""  style="display: flex; justify-content: space-between; ">
+        <div class="govuk-grid-row"  style="max-width:1860px; margin: 0 auto;">
+            <div class="govuk-tabs__panel" id="event" style="padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px; min-height: 300px;">
 
 
-
-                <div class="govuk-tabs__panel" id="event" style="display: flex; padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px; min-height: 300px;">
-
-                    <div style="margin-top: 40px;">
 
                         <h2 class="govuk-heading-l">Language, interpreters and adjustments</h2>
-
 
                         <form
                             name="aspnetForm"
@@ -42,14 +35,8 @@ Case details
                         </form>
 
 
-                    </div>
-
-                </div>
 
             </div>
-
-
-
         </div>
     </main>
 
