--- a/app/views/workallocation/pages/lms.html
+++ b/app/views/workallocation/pages/lms.html
@@ -33,7 +33,7 @@ My work
               <th scope="col" class="govuk-table__header" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
               <th scope="col" class="govuk-table__header" aria-sort="none"><button type="button" data-index="1">Location</button></th>
               <th scope="col" class="govuk-table__header" aria-sort="none"><button type="button" data-index="1">Task</button></th>
-              <th scope="col" class="govuk-table__header" aria-sort="none"><button type="button" data-index="1">Date</button></th>
+              <th scope="col" class="govuk-table__header" aria-sort="none"><button type="button" data-index="1">Task created</button></th>
               <th scope="col" class="govuk-table__header" aria-sort="none"><button type="button" data-index="1">Person</button></th>
             </tr>
           </thead>
@@ -45,10 +45,7 @@ My work
               <td data-label="Status">Taylor House</td>
               <td data-label="Date">Review respondent evidence</td>
 
-                <td data-label="Amount">{{govukTag({
-                text: now | date( 'subtract', 2, 'days' ) | date,
-                classes: "govuk-tag--red"
-              })}} </td>
+                <td data-label="Amount">{{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}  </td>
       <td data-label="Date">Judge Beech</td>
             </tr>
           </tbody>
