more of the journey put into prototype

--- a/app/views/hearings/pages/panel.html
+++ b/app/views/hearings/pages/panel.html
@@ -57,16 +57,16 @@ Case details
                                     <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
 
                                         <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="contact" name="contact" type="radio" value="email" onclick="();">
-                                            <label class="govuk-label govuk-radios__label" for="contact"  onclick="showJudges();">
-                                                Same panel as last time
+                                            <input class="govuk-radios__input" id="panel-1" name="panelsame" type="radio" value="Same panel as last hearing" >
+                                            <label class="govuk-label govuk-radios__label" for="panel-1"  onclick="showJudges();">
+                                                Same panel as most recent hearing
                                             </label>
                                         </div>
 
                                         <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="contact-3" name="contact" type="radio" value="text"   onclick="(); ">
-                                            <label class="govuk-label govuk-radios__label" for="contact-3" onclick="hideJudges(); ">
-                                                A totally new panel to the case
+                                            <input class="govuk-radios__input" id="panel-2" name="panelsame" type="radio" value="Totally new panel"   >
+                                            <label class="govuk-label govuk-radios__label" for="panel-2" onclick="hideJudges(); ">
+                                               Totally new panel
                                             </label>
                                         </div>
 
@@ -78,65 +78,7 @@ Case details
 
 
 
-                            <div class="govuk-form-group">
-                                <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
-                                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                                        <h1 class="govuk-fieldset__heading">
-                                            Select
-                                        </h1>
-                                    </legend>
-                                    <div id="waste-hint" class="govuk-hint">
-                                        Select all that apply.
-                                    </div>
-                                    <div class="govuk-checkboxes" data-module="govuk-checkboxes">
-                                        <div class="govuk-checkboxes__item">
-                                            <input class="govuk-checkboxes__input" id="venues1" name="venues" type="checkbox" value="BEXLEYHEATH SOCIAL SECURITY AND CHILD SUPPORT TRIBUNAL">
-                                            <label class="govuk-label govuk-checkboxes__label" for="venues1">
-                                                Salaried legally qualified
-                                            </label>
-                                        </div>
-                                        <div class="govuk-checkboxes__item">
-                                            <input class="govuk-checkboxes__input" id="venues2" name="venues" type="checkbox" value="EAST LONDON TRIBUNAL HEARING CENTRE">
-                                            <label class="govuk-label govuk-checkboxes__label" for="venues2">
-                                                Fee paid legally qualified
-                                            </label>
-                                        </div>
-                                        <div class="govuk-checkboxes__item">
-                                            <input class="govuk-checkboxes__input" id="venues3" name="venues" type="checkbox" value="ENFIELD SOCIAL SECURITY AND CHILD SUPPORT TRIBUNAL">
-                                            <label class="govuk-label govuk-checkboxes__label" for="venues3">
-                                                Disability qualified
-                                            </label>
-                                        </div>
-                                        <div class="govuk-checkboxes__item">
-                                            <input class="govuk-checkboxes__input" id="venues4" name="venues" type="checkbox" value="FOX COURT SSCS (HOLBORN COURTS AND TRIBUNALS)">
-                                            <label class="govuk-label govuk-checkboxes__label" for="venues4">
-                                                Financially qualified
-                                            </label>
-                                        </div>
-                                        <div class="govuk-checkboxes__item">
-                                            <input class="govuk-checkboxes__input" id="venues5" name="venues" type="checkbox" value="HATTON CROSS TRIBUNAL HEARING CENTRE">
-                                            <label class="govuk-label govuk-checkboxes__label" for="venues5">
-                                                Medically qualified - Specialist
-                                            </label>
-                                        </div>
-                                        <div class="govuk-checkboxes__item">
-                                            <input class="govuk-checkboxes__input" id="venues6" name="venues" type="checkbox" value="ROMFORD COUNTY COURT AND FAMILY COURT">
-                                            <label class="govuk-label govuk-checkboxes__label" for="venues6">
-                                                Medically qualified - non specialist
-                                            </label>
-                                        </div>
-                                        <div class="govuk-checkboxes__item">
-                                            <input class="govuk-checkboxes__input" id="venues7" name="venues" type="checkbox" value="SUTTON SOCIAL SECURITY AND CHILD SUPPORT TRIBUNAL">
-                                            <label class="govuk-label govuk-checkboxes__label" for="venues7">
-                                                Salaried - Medcally Qualified
-                                            </label>
-                                        </div>
 
-
-                                    </div>
-
-                                </fieldset>
-                            </div>
 
 
 
