--- a/app/views/hearings/pages/startrequest.html
+++ b/app/views/hearings/pages/startrequest.html
@@ -28,7 +28,7 @@ Case details
                             <p>03 - Judge, Doctor and disability member</p>
 
                             <div class="govuk-inset-text">
-                                Rastricted case
+                                Restricted case
                             </div>
 
                             <div class="govuk-inset-text">
