--- a/app/views/hearings/pages/timing.html
+++ b/app/views/hearings/pages/timing.html
@@ -24,6 +24,139 @@ Case details
                             >
 
 
+                            <div class="govuk-form-group govuk-!-margin-top-5">
+                                <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
+                                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                                        <h3 class="govuk-fieldset__heading">
+                                            Morning or afternoon
+                                        </h3>
+                                    </legend>
+                                    <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
+
+                                        <div class="govuk-radios__item">
+                                            <input class="govuk-radios__input" id="ampm-1" name="ampm" type="radio" value="AM or PM" checked>
+                                            <label class="govuk-label govuk-radios__label" for="ampm-1">
+                                                AM or PM
+                                            </label>
+                                        </div>
+
+                                        <div class="govuk-radios__item">
+                                            <input class="govuk-radios__input" id="ampm-2" name="ampm" type="radio" value="AM only"   >
+                                            <label class="govuk-label govuk-radios__label" for="ampm-2">
+                                                AM only
+                                            </label>
+                                        </div>
+
+                                        <div class="govuk-radios__item">
+                                            <input class="govuk-radios__input" id="ampm-3" name="ampm" type="radio" value="PM only"   >
+                                            <label class="govuk-label govuk-radios__label" for="ampm-3">
+                                                PM only
+                                            </label>
+                                        </div>
+
+                                    </div>
+
+                                </fieldset>
+                            </div>
+
+
+                            <div class="govuk-form-group govuk-!-margin-top-5">
+                                <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
+                                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                                        <h3 class="govuk-fieldset__heading">
+                                            Duration
+                                        </h3>
+                                    </legend>
+                                    <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
+
+                                        <div class="govuk-radios__item">
+                                            <input class="govuk-radios__input" id="duration1" name="ampm" type="radio" value="15 minutes" onclick="hideothertime()">
+                                            <label class="govuk-label govuk-radios__label" for="duration1"  onclick="hideothertime()">
+                                                15 minutes
+                                            </label>
+                                        </div>
+
+                                        <div class="govuk-radios__item">
+                                            <input class="govuk-radios__input" id="duration2" name="ampm" type="radio" value="30 minutes"  onclick="hideothertime()"  >
+                                            <label class="govuk-label govuk-radios__label" for="ampm-2" onclick="hideothertime()">
+                                                30 minutes
+                                            </label>
+                                        </div>
+
+                                        <div class="govuk-radios__item">
+                                            <input class="govuk-radios__input" id="ampm-3" name="ampm" type="radio" value="1 hour"   onclick="hideothertime()" >
+                                            <label class="govuk-label govuk-radios__label" for="ampm-3" onclick="hideothertime()">
+                                                1 hour
+                                            </label>
+                                        </div>
+
+                                        <div class="govuk-radios__item">
+                                            <input class="govuk-radios__input" id="ampm-3" name="ampm" type="radio" value="1 hour and 30 minutes"   onclick="hideothertime()" >
+                                            <label class="govuk-label govuk-radios__label" for="ampm-3" onclick="hideothertime()">
+                                                1 hour and 30 minutes
+                                            </label>
+                                        </div>
+
+                                        <div class="govuk-radios__item">
+                                            <input class="govuk-radios__input" id="ampm-3" name="ampm" type="radio" value="Other"  onclick="showothertime()"  >
+                                            <label class="govuk-label govuk-radios__label" for="ampm-3" onclick="showothertime()"  >
+                                                Other
+                                            </label>
+                                        </div>
+
+
+                                        <div class="govuk-radios__conditional govuk-!-padding-bottom-1 govuk-!-padding-top-3" style="display:none;" id="othertime">
+                                            <div class="govuk-form-group">
+                                                <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint">
+                                                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                                                        <h1 class="govuk-fieldset__heading">
+                                                            Duration
+                                                        </h1>
+                                                    </legend>
+                                                    <div class="govuk-date-input" id="passport-issued">
+                                                        <div class="govuk-date-input__item">
+                                                            <div class="govuk-form-group">
+                                                                <label class="govuk-label govuk-date-input__label" for="passport-issued-day">
+                                                                    Hours
+                                                                </label>
+                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="passport-issued-day" name="passport-issued-day" type="text" pattern="[0-9]*" inputmode="numeric"></div>
+                                                        </div>
+                                                        <div class="govuk-date-input__item">
+                                                            <div class="govuk-form-group">
+                                                                <label class="govuk-label govuk-date-input__label" for="passport-issued-month">
+                                                                    Minutes
+                                                                </label>
+                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="passport-issued-month" name="passport-issued-month" type="text" pattern="[0-9]*" inputmode="numeric"></div>
+                                                        </div>
+                                                    </div>
+
+                                                </fieldset>
+                                            </div>
+
+
+                                            <div class="govuk-form-group" style="width: 600px;">
+                                                <label class="govuk-label govuk-label-m govuk-!-font-weight-bold" for="more-detail">
+                                                    Reason for non-standard time
+                                                </label>
+                                                <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="2" aria-describedby="more-detail-hint"></textarea>
+                                            </div>
+
+
+
+                                        </div>
+
+                                    </div>
+
+                                </fieldset>
+                            </div>
+
+
+
+
+
+
+
+
 
                             <div class="govuk-form-group  govuk-!-margin-top-5" >
                                 <button class="govuk-button" data-module="govuk-button">
@@ -38,5 +171,24 @@ Case details
             </div>
         </div>
     </main>
+
+
+
+
+<script>
+
+    function showothertime()
+    {
+        document.getElementById("othertime").style.display = "block";
+    }
+
+    function hideothertime()
+    {
+        document.getElementById("othertime").style.display = "none";
+    }
+
+
+</script>
+
 
 {% endblock %}
